examples/test/testpolicy8548.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8548
  namespace: namespace209
spec:
  podSelector:
    matchLabels:
      key0: value45
      key2: value16
      key47: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value32
      podSelector:
        matchLabels:
          key12: value48
          key36: value44
          key47: value47
